# postea

./: Cargo.toml  Dockerfile  Gemfile  Package.swift
.github/workflows/: branch-protection.yaml  continuous-delivery.yaml
app/controllers/: authenticated_controller.rb  posts_controller.rb  sessions_controller.rb
app/models/: user.rb
app/views/layouts/: application.html.erb
app/views/sessions/: new.html.erb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
config/environments/: production.rb
config/initializers/: omniauth.rb
db/: schema.rb
db/migrate/: 20240414130014_create_users.rb
migrations/: 0000_feeds.sql  0001_posts.sql  schema.sql
sorbet/rbi/dsl/: generated_path_helpers_module.rbi  generated_url_helpers_module.rbi  user.rbi
sorbet/rbi/dsl/action_mailbox/: inbound_email.rbi
sorbet/rbi/dsl/action_text/: encrypted_rich_text.rbi  rich_text.rbi
sorbet/rbi/gems/: actionpack@7.1.3.2.rbi  activemodel@7.1.3.2.rbi  activerecord-session_store@2.1.0.rbi  activerecord@7.1.3.2.rbi  activesupport@7.1.3.2.rbi  capybara@3.40.0.rbi  cgi@0.4.1.rbi  erb-formatter@0.7.2.rbi  faraday@2.9.0.rbi  globalid@1.2.1.rbi  jwt@2.8.1.rbi  omniauth-oauth2@1.8.0.rbi  omniauth-rails_csrf_protection@1.0.1.rbi  rack-test@2.1.0.rbi  rack@3.0.10.rbi  rbi@0.1.10.rbi  redis-client@0.22.0.rbi  rufo@0.17.1.rbi  selenium-webdriver@4.19.0.rbi  syntax_tree@6.2.0.rbi  tapioca@0.13.1.rbi  tapioca@0.13.2.rbi  uri@0.13.0.rbi  yard@0.9.36.rbi
src/: main.rs  models.rs  parsers.rs  utils.rs
test/fixtures/: users.yml
(+4 files in other folders)
