[package]
name = "postea"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97" }
axum = { version = "0.8.1" }
chrono = { version = "0.4.40" }
deadpool-postgres = { version = "0.14.1" }
postgres-types = { version = "0.2.9", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tower-layer = { version = "0.3.3" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
